--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,7 +78,7 @@
         android:id="@+id/login_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/user_id"
+        android:layout_alignRight="@+id/user_id"
         android:layout_below="@+id/user_pass"
         android:layout_marginTop="20dp"
         android:background="@drawable/my_back_buttom"
@@ -90,7 +90,7 @@
         android:id="@+id/exit_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/user_id"
+        android:layout_alignLeft="@+id/user_id"
         android:layout_below="@+id/user_pass"
         android:layout_marginTop="20dp"
         android:background="@drawable/my_back_buttom2"
