--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        android:visibility="visible">
+        android:visibility="visible"
+        android:id="@+id/dashboardLayer">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -83,203 +84,196 @@
             android:textColor="#ffaeae" />
     </LinearLayout>
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout
         android:id="@+id/setting_layer"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="70dp"
-        android:background="@color/white"
-        android:orientation="vertical">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:orientation="horizontal"
+        android:background="@color/my_transparent">
 
         <LinearLayout
-            android:id="@+id/edit_device"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:background="@color/line1"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="fill_parent"
-                android:background="@drawable/d" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:gravity="left|center_vertical"
-                android:shadowColor="@color/my_main_back"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
-                android:text="@string/edit_node"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="match_parent"></LinearLayout>
 
         <LinearLayout
-            android:id="@+id/edit_zone"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:background="@color/line2"
-            android:orientation="horizontal">
+            android:orientation="vertical"
+            android:layout_width="0dp"
+            android:layout_weight="4"
+            android:layout_height="match_parent"
+            android:paddingTop="70dp">
 
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="fill_parent"
-                android:background="@drawable/a" />
+            <LinearLayout
+                android:id="@+id/edit_device"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/line1"
+                android:orientation="horizontal"
+                android:foreground="@drawable/user_shape">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:gravity="left|center_vertical"
-                android:shadowColor="@color/my_main_back"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
-                android:text="@string/edit_zone"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold" />
 
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/setting_size"
+                    android:gravity="center"
+                    android:shadowColor="@color/my_main_back"
+                    android:shadowDx="3"
+                    android:shadowDy="3"
+                    android:shadowRadius="5"
+                    android:text="@string/edit_node"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/setting_text_size"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/edit_zone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/line2"
+                android:foreground="@drawable/user_shape"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/setting_size"
+                    android:gravity="center"
+                    android:shadowColor="@color/my_main_back"
+                    android:shadowDx="3"
+                    android:shadowDy="3"
+                    android:shadowRadius="5"
+                    android:text="@string/edit_zone"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/setting_text_size"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/edit_senario"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/line4"
+                android:foreground="@drawable/user_shape"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/setting_size"
+                    android:gravity="center"
+                    android:shadowColor="@color/my_main_back"
+                    android:shadowDx="3"
+                    android:shadowDy="3"
+                    android:shadowRadius="5"
+                    android:text="@string/edit_senario"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/setting_text_size"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/edit_user"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/line5"
+                android:foreground="@drawable/user_shape"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/setting_size"
+                    android:gravity="center"
+                    android:shadowColor="@color/my_main_back"
+                    android:shadowDx="3"
+                    android:shadowDy="3"
+                    android:shadowRadius="5"
+                    android:text="@string/edit_user"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/setting_text_size"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/rules"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/line7"
+                android:foreground="@drawable/user_shape"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/setting_size"
+                    android:gravity="center"
+                    android:shadowColor="@color/my_main_back"
+                    android:shadowDx="3"
+                    android:shadowDy="3"
+                    android:shadowRadius="5"
+                    android:text="@string/rules"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/setting_text_size"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/about_me"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/line10"
+                android:foreground="@drawable/user_shape"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/setting_size"
+                    android:gravity="center"
+                    android:shadowColor="@color/my_main_back"
+                    android:shadowDx="3"
+                    android:shadowDy="3"
+                    android:shadowRadius="5"
+                    android:text="@string/about_me"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/setting_text_size"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/exit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/line11"
+                android:foreground="@drawable/user_shape"
+                android:orientation="horizontal">
+
+
+                <TextView
+                    android:layout_width="fill_parent"
+                    android:layout_height="@dimen/setting_size"
+                    android:gravity="center"
+                    android:shadowColor="@color/my_main_back"
+                    android:shadowDx="3"
+                    android:shadowDy="3"
+                    android:shadowRadius="5"
+                    android:text="@string/exit"
+                    android:textColor="@color/white"
+                    android:textSize="@dimen/setting_text_size"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/edit_senario"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:background="@color/line4"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="fill_parent"
-                android:background="@drawable/s" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:gravity="left|center_vertical"
-                android:shadowColor="@color/my_main_back"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
-                android:text="@string/edit_senario"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/edit_user"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:background="@color/line5"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="fill_parent"
-                android:background="@drawable/k" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:gravity="left|center_vertical"
-                android:shadowColor="@color/my_main_back"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
-                android:text="@string/edit_user"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/rules"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:background="@color/line7"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="fill_parent"
-                android:background="@drawable/g" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:gravity="left|center_vertical"
-                android:shadowColor="@color/my_main_back"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
-                android:text="@string/rules"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/about_me"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:background="@color/line10"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="fill_parent"
-                android:background="@drawable/m" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:gravity="left|center_vertical"
-                android:shadowColor="@color/my_main_back"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
-                android:text="@string/about_me"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/exit"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:background="@color/line11"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="50dp"
-                android:layout_height="fill_parent"
-                android:background="@drawable/kh" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="fill_parent"
-                android:gravity="left|center_vertical"
-                android:shadowColor="@color/my_main_back"
-                android:shadowDx="1"
-                android:shadowDy="1"
-                android:shadowRadius="2"
-                android:text="@string/exit"
-                android:textColor="@color/white"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
     </LinearLayout>
 
 
