--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -60,15 +60,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="skip"
-            android:id="@+id/skip" />
+            android:id="@+id/skip"
+            android:layout_alignParentLeft="true"/>
 
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="next"
             android:id="@+id/next"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentRight="true" />
     </RelativeLayout>
 
 </LinearLayout>
