--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,42 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="TextMenu" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">@dimen/setting_size</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">@dimen/setting_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">1dp</item>
+        <item name="android:paddingTop">3dp</item>
+        <item name="android:paddingBottom">3dp</item>
+        <item name="android:shadowColor">@color/my_main_back</item>
+        <item name="android:shadowDx">3</item>
+        <item name="android:shadowDy">3</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:shadowRadius">5</item>
+    </style>
+
+    <style name="InputTextStyle" parent="@android:style/TextAppearance.Medium">
+        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_height">@dimen/setting_size</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:textSize">@dimen/setting_text_size</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">3dp</item>
+        <item name="android:shadowColor">@color/my_stroke</item>
+        <item name="android:shadowDx">1</item>
+        <item name="android:shadowDy">1</item>
+        <item name="android:background">@drawable/tedit</item>
+        <item name="android:textColorHint">@color/text_hint</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:layout_marginTop">@dimen/default_gap</item>
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:shadowRadius">2</item>
+    </style>
+
     <style name="Theme.Backable" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="homeAsUpIndicator">@drawable/ic_back</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
