--- a/app/src/main/res/layout/activity_device.xml
+++ b/app/src/main/res/layout/activity_device.xml
@@ -22,9 +22,14 @@
         android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_weight="3"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:id="@+id/detail">
 
 
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/name" />
     </LinearLayout>
 
 
