--- a/app/src/main/res/layout/activity_device_detail.xml
+++ b/app/src/main/res/layout/activity_device_detail.xml
@@ -28,7 +28,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:id="@+id/textView2"
+                android:id="@+id/name"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/app_name" />
