--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,7 +94,8 @@
             android:orientation="vertical"
             android:layout_width="0dp"
             android:layout_weight="1"
-            android:layout_height="match_parent"></LinearLayout>
+            android:layout_height="match_parent"
+            android:id="@+id/menu_space"></LinearLayout>
 
         <LinearLayout
             android:orientation="vertical"
