--- a/app/src/main/res/layout/fragment_analog_clock.xml
+++ b/app/src/main/res/layout/fragment_analog_clock.xml
@@ -1,10 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="100dp"
-    android:layout_height="100dp">
+    android:orientation="horizontal" android:layout_width="400dp"
+    android:layout_height="400dp"
+    android:gravity="center_vertical">
     <app.shome.ir.shome.ui.EnhancedAnalogClock
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
     </app.shome.ir.shome.ui.EnhancedAnalogClock>
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:gravity="center_vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/month"
+            android:textColor="#00f915"
+            android:gravity="bottom|center"
+            android:textSize="25dp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/days"
+            android:textColor="#00f915"
+            android:gravity="center"
+            android:textSize="50sp"
+            android:textStyle="bold" />
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:id="@+id/year"
+            android:textColor="#00f915"
+            android:gravity="top|center"
+            android:textSize="25dp"
+            android:textStyle="bold" />
+    </LinearLayout>
 
 </LinearLayout>
